--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: auth
           image: puthutp/auth
+          imagePullPolicy: Never
 ---
 apiVersion: v1
 kind: Service
