--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -10,6 +10,14 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: puthutp/client
+      context: client
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
+      docker:
+        dockerfile: Dockerfile
   local:
     push: false
 manifests:
