--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pptix/common": "^1.0.6",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.16",
     "@types/jsonwebtoken": "^9.0.1",
