--- a/tickets/package.json
+++ b/tickets/package.json
@@ -19,9 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "@pptix/common": "^1.0.6",
+    "@types/body-parser": "^1.19.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.16",
     "@types/jsonwebtoken": "^9.0.1",
+    "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
