--- a/infra/k8s/nats-depl.yaml
+++ b/infra/k8s/nats-depl.yaml
@@ -38,7 +38,7 @@ metadata:
   name: nats-srv
 spec:
   selector:
-    app: nats-srv
+    app: nats
   ports:
     - name: client
       protocol: TCP
