--- a/payments/package.json
+++ b/payments/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@pptix/common": "^1.0.16",
+    "@pptix/common": "^1.0.18",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.16",
@@ -32,6 +32,7 @@
     "mongoose": "^6.9.0",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^12.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
