--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: auth
           image: puthutp/auth
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
